cmake_minimum_required(VERSION 3.21)
project(cmpe_152_project)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES Pascal.cpp)

include_directories(.)
include_directories(ANTLR-4.9.3)
include_directories(ANTLR-4.9.3/antlr4-runtime)
include_directories(ANTLR-4.9.3/antlr4-runtime/atn)
include_directories(ANTLR-4.9.3/antlr4-runtime/dfa)
include_directories(ANTLR-4.9.3/antlr4-runtime/misc)
include_directories(ANTLR-4.9.3/antlr4-runtime/support)
include_directories(ANTLR-4.9.3/antlr4-runtime/tree)
include_directories(ANTLR-4.9.3/antlr4-runtime/tree/pattern)
include_directories(ANTLR-4.9.3/antlr4-runtime/tree/xpath)
include_directories(ANTLR-4.9.3/lib)
include_directories(backend)
include_directories(backend/converter)
include_directories(backend/debugger)
include_directories(backend/interpreter)
include_directories(cmake-build-debug)
include_directories(frontend)
include_directories(intermediate)
include_directories(intermediate/symtab)
include_directories(intermediate/type)
include_directories(intermediate/util)

set(HEADER_FILES
        ANTLR-4.9.3/antlr4-runtime/atn/AbstractPredicateTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/ActionTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/AmbiguityInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/ArrayPredictionContext.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATN.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNConfig.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNConfigSet.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNDeserializationOptions.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNDeserializer.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNSerializer.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNSimulator.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNState.h
        ANTLR-4.9.3/antlr4-runtime/atn/ATNType.h
        ANTLR-4.9.3/antlr4-runtime/atn/AtomTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/BasicBlockStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/BasicState.h
        ANTLR-4.9.3/antlr4-runtime/atn/BlockEndState.h
        ANTLR-4.9.3/antlr4-runtime/atn/BlockStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/ContextSensitivityInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionEventInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionState.h
        ANTLR-4.9.3/antlr4-runtime/atn/EmptyPredictionContext.h
        ANTLR-4.9.3/antlr4-runtime/atn/EpsilonTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/ErrorInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerActionExecutor.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerActionType.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerATNConfig.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerATNSimulator.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerChannelAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerCustomAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerIndexedCustomAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerModeAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerMoreAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerPopModeAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerPushModeAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerSkipAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LexerTypeAction.h
        ANTLR-4.9.3/antlr4-runtime/atn/LL1Analyzer.h
        ANTLR-4.9.3/antlr4-runtime/atn/LookaheadEventInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/LoopEndState.h
        ANTLR-4.9.3/antlr4-runtime/atn/NotSetTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/OrderedATNConfigSet.h
        ANTLR-4.9.3/antlr4-runtime/atn/ParseInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/ParserATNSimulator.h
        ANTLR-4.9.3/antlr4-runtime/atn/PlusBlockStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/PlusLoopbackState.h
        ANTLR-4.9.3/antlr4-runtime/atn/PrecedencePredicateTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/PredicateEvalInfo.h
        ANTLR-4.9.3/antlr4-runtime/atn/PredicateTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/PredictionContext.h
        ANTLR-4.9.3/antlr4-runtime/atn/PredictionMode.h
        ANTLR-4.9.3/antlr4-runtime/atn/ProfilingATNSimulator.h
        ANTLR-4.9.3/antlr4-runtime/atn/RangeTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/RuleStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/RuleStopState.h
        ANTLR-4.9.3/antlr4-runtime/atn/RuleTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/SemanticContext.h
        ANTLR-4.9.3/antlr4-runtime/atn/SetTransition.h
        ANTLR-4.9.3/antlr4-runtime/atn/SingletonPredictionContext.h
        ANTLR-4.9.3/antlr4-runtime/atn/StarBlockStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/StarLoopbackState.h
        ANTLR-4.9.3/antlr4-runtime/atn/StarLoopEntryState.h
        ANTLR-4.9.3/antlr4-runtime/atn/TokensStartState.h
        ANTLR-4.9.3/antlr4-runtime/atn/Transition.h
        ANTLR-4.9.3/antlr4-runtime/atn/WildcardTransition.h
        ANTLR-4.9.3/antlr4-runtime/dfa/DFA.h
        ANTLR-4.9.3/antlr4-runtime/dfa/DFASerializer.h
        ANTLR-4.9.3/antlr4-runtime/dfa/DFAState.h
        ANTLR-4.9.3/antlr4-runtime/dfa/LexerDFASerializer.h
        ANTLR-4.9.3/antlr4-runtime/misc/InterpreterDataReader.h
        ANTLR-4.9.3/antlr4-runtime/misc/Interval.h
        ANTLR-4.9.3/antlr4-runtime/misc/IntervalSet.h
        ANTLR-4.9.3/antlr4-runtime/misc/MurmurHash.h
        ANTLR-4.9.3/antlr4-runtime/misc/Predicate.h
        ANTLR-4.9.3/antlr4-runtime/support/Any.h
        ANTLR-4.9.3/antlr4-runtime/support/Arrays.h
        ANTLR-4.9.3/antlr4-runtime/support/BitSet.h
        ANTLR-4.9.3/antlr4-runtime/support/Casts.h
        ANTLR-4.9.3/antlr4-runtime/support/CPPUtils.h
        ANTLR-4.9.3/antlr4-runtime/support/Declarations.h
        ANTLR-4.9.3/antlr4-runtime/support/Guid.h
        ANTLR-4.9.3/antlr4-runtime/support/StringUtils.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/Chunk.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreeMatch.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreePattern.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreePatternMatcher.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/RuleTagToken.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TagChunk.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TextChunk.h
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TokenTagToken.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPath.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathLexer.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathLexerErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathRuleAnywhereElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathRuleElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathTokenAnywhereElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathTokenElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathWildcardAnywhereElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathWildcardElement.h
        ANTLR-4.9.3/antlr4-runtime/tree/AbstractParseTreeVisitor.h
        ANTLR-4.9.3/antlr4-runtime/tree/ErrorNode.h
        ANTLR-4.9.3/antlr4-runtime/tree/ErrorNodeImpl.h
        ANTLR-4.9.3/antlr4-runtime/tree/IterativeParseTreeWalker.h
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTree.h
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeListener.h
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeProperty.h
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeVisitor.h
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeWalker.h
        ANTLR-4.9.3/antlr4-runtime/tree/TerminalNode.h
        ANTLR-4.9.3/antlr4-runtime/tree/TerminalNodeImpl.h
        ANTLR-4.9.3/antlr4-runtime/tree/Trees.h
        ANTLR-4.9.3/antlr4-runtime/antlr4-common.h
        ANTLR-4.9.3/antlr4-runtime/antlr4-runtime.h
        ANTLR-4.9.3/antlr4-runtime/ANTLRErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/ANTLRErrorStrategy.h
        ANTLR-4.9.3/antlr4-runtime/ANTLRFileStream.h
        ANTLR-4.9.3/antlr4-runtime/ANTLRInputStream.h
        ANTLR-4.9.3/antlr4-runtime/BailErrorStrategy.h
        ANTLR-4.9.3/antlr4-runtime/BaseErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/BufferedTokenStream.h
        ANTLR-4.9.3/antlr4-runtime/CharStream.h
        ANTLR-4.9.3/antlr4-runtime/CommonToken.h
        ANTLR-4.9.3/antlr4-runtime/CommonTokenFactory.h
        ANTLR-4.9.3/antlr4-runtime/CommonTokenStream.h
        ANTLR-4.9.3/antlr4-runtime/ConsoleErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/DefaultErrorStrategy.h
        ANTLR-4.9.3/antlr4-runtime/DiagnosticErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/Exceptions.h
        ANTLR-4.9.3/antlr4-runtime/FailedPredicateException.h
        ANTLR-4.9.3/antlr4-runtime/InputMismatchException.h
        ANTLR-4.9.3/antlr4-runtime/InterpreterRuleContext.h
        ANTLR-4.9.3/antlr4-runtime/IntStream.h
        ANTLR-4.9.3/antlr4-runtime/Lexer.h
        ANTLR-4.9.3/antlr4-runtime/LexerInterpreter.h
        ANTLR-4.9.3/antlr4-runtime/LexerNoViableAltException.h
        ANTLR-4.9.3/antlr4-runtime/ListTokenSource.h
        ANTLR-4.9.3/antlr4-runtime/NoViableAltException.h
        ANTLR-4.9.3/antlr4-runtime/Parser.h
        ANTLR-4.9.3/antlr4-runtime/ParserInterpreter.h
        ANTLR-4.9.3/antlr4-runtime/ParserRuleContext.h
        ANTLR-4.9.3/antlr4-runtime/ProxyErrorListener.h
        ANTLR-4.9.3/antlr4-runtime/RecognitionException.h
        ANTLR-4.9.3/antlr4-runtime/Recognizer.h
        ANTLR-4.9.3/antlr4-runtime/RuleContext.h
        ANTLR-4.9.3/antlr4-runtime/RuleContextWithAltNum.h
        ANTLR-4.9.3/antlr4-runtime/RuntimeMetaData.h
        ANTLR-4.9.3/antlr4-runtime/Token.h
        ANTLR-4.9.3/antlr4-runtime/TokenFactory.h
        ANTLR-4.9.3/antlr4-runtime/TokenSource.h
        ANTLR-4.9.3/antlr4-runtime/TokenStream.h
        ANTLR-4.9.3/antlr4-runtime/TokenStreamRewriter.h
        ANTLR-4.9.3/antlr4-runtime/UnbufferedCharStream.h
        ANTLR-4.9.3/antlr4-runtime/UnbufferedTokenStream.h
        ANTLR-4.9.3/antlr4-runtime/Vocabulary.h
        ANTLR-4.9.3/antlr4-runtime/WritableToken.h
        backend/compiler/CodeGenerator.h
        backend/compiler/Compiler.h
        backend/compiler/Directive.h
        backend/compiler/ExpressionGenerator.h
        backend/compiler/Instruction.h
        backend/compiler/Label.h
        backend/compiler/LocalStack.h
        backend/compiler/LocalVariables.h
        backend/compiler/ProgramGenerator.h
        backend/compiler/StatementGenerator.h
        backend/compiler/StructuredDataGenerator.h
        backend/converter/CodeGenerator.h
        backend/converter/Converter.h
        backend/interpreter/Cell.h
        backend/interpreter/Executor.h
        backend/interpreter/MemoryMap.h
        backend/interpreter/RuntimeDisplay.h
        backend/interpreter/RuntimeErrorHandler.h
        backend/interpreter/RuntimeStack.h
        backend/interpreter/StackFrame.h
        frontend/Listing.h
        frontend/SemanticErrorHandler.h
        frontend/Semantics.h
        frontend/SyntaxErrorHandler.h
        intermediate/symtab/Predefined.h
        intermediate/symtab/Symtab.h
        intermediate/symtab/SymtabEntry.h
        intermediate/symtab/SymtabStack.h
        intermediate/type/TypeChecker.h
        intermediate/type/Typespec.h
        intermediate/util/BackendMode.h
        intermediate/util/CrossReferencer.h
        Object.h
        PascalBaseVisitor.h
        PascalLexer.h
        PascalParser.h
        PascalVisitor.h)

set(SOURCE_FILES
        ANTLR-4.9.3/antlr4-runtime/atn/AbstractPredicateTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ActionTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/AmbiguityInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ArrayPredictionContext.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATN.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNConfig.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNConfigSet.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNDeserializationOptions.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNDeserializer.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNSerializer.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNSimulator.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ATNState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/AtomTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/BasicBlockStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/BasicState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/BlockEndState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/BlockStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ContextSensitivityInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionEventInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/DecisionState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/EmptyPredictionContext.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/EpsilonTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ErrorInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerActionExecutor.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerATNConfig.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerATNSimulator.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerChannelAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerCustomAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerIndexedCustomAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerModeAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerMoreAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerPopModeAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerPushModeAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerSkipAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LexerTypeAction.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LL1Analyzer.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LookaheadEventInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/LoopEndState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/NotSetTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/OrderedATNConfigSet.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ParseInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ParserATNSimulator.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PlusBlockStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PlusLoopbackState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PrecedencePredicateTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PredicateEvalInfo.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PredicateTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PredictionContext.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/PredictionMode.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/ProfilingATNSimulator.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/RangeTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/RuleStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/RuleStopState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/RuleTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/SemanticContext.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/SetTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/SingletonPredictionContext.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/StarBlockStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/StarLoopbackState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/StarLoopEntryState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/TokensStartState.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/Transition.cpp
        ANTLR-4.9.3/antlr4-runtime/atn/WildcardTransition.cpp
        ANTLR-4.9.3/antlr4-runtime/dfa/DFA.cpp
        ANTLR-4.9.3/antlr4-runtime/dfa/DFASerializer.cpp
        ANTLR-4.9.3/antlr4-runtime/dfa/DFAState.cpp
        ANTLR-4.9.3/antlr4-runtime/dfa/LexerDFASerializer.cpp
        ANTLR-4.9.3/antlr4-runtime/misc/InterpreterDataReader.cpp
        ANTLR-4.9.3/antlr4-runtime/misc/Interval.cpp
        ANTLR-4.9.3/antlr4-runtime/misc/IntervalSet.cpp
        ANTLR-4.9.3/antlr4-runtime/misc/MurmurHash.cpp
        ANTLR-4.9.3/antlr4-runtime/misc/Predicate.cpp
        ANTLR-4.9.3/antlr4-runtime/support/Any.cpp
        ANTLR-4.9.3/antlr4-runtime/support/Arrays.cpp
        ANTLR-4.9.3/antlr4-runtime/support/CPPUtils.cpp
        ANTLR-4.9.3/antlr4-runtime/support/Guid.cpp
        ANTLR-4.9.3/antlr4-runtime/support/StringUtils.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/Chunk.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreeMatch.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreePattern.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/ParseTreePatternMatcher.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/RuleTagToken.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TagChunk.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TextChunk.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/pattern/TokenTagToken.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPath.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathLexer.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathLexerErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathRuleAnywhereElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathRuleElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathTokenAnywhereElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathTokenElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathWildcardAnywhereElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/xpath/XPathWildcardElement.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ErrorNode.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ErrorNodeImpl.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/IterativeParseTreeWalker.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTree.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeListener.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeVisitor.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/ParseTreeWalker.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/TerminalNode.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/TerminalNodeImpl.cpp
        ANTLR-4.9.3/antlr4-runtime/tree/Trees.cpp
        ANTLR-4.9.3/antlr4-runtime/ANTLRErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/ANTLRErrorStrategy.cpp
        ANTLR-4.9.3/antlr4-runtime/ANTLRFileStream.cpp
        ANTLR-4.9.3/antlr4-runtime/ANTLRInputStream.cpp
        ANTLR-4.9.3/antlr4-runtime/BailErrorStrategy.cpp
        ANTLR-4.9.3/antlr4-runtime/BaseErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/BufferedTokenStream.cpp
        ANTLR-4.9.3/antlr4-runtime/CharStream.cpp
        ANTLR-4.9.3/antlr4-runtime/CommonToken.cpp
        ANTLR-4.9.3/antlr4-runtime/CommonTokenFactory.cpp
        ANTLR-4.9.3/antlr4-runtime/CommonTokenStream.cpp
        ANTLR-4.9.3/antlr4-runtime/ConsoleErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/DefaultErrorStrategy.cpp
        ANTLR-4.9.3/antlr4-runtime/DiagnosticErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/Exceptions.cpp
        ANTLR-4.9.3/antlr4-runtime/FailedPredicateException.cpp
        ANTLR-4.9.3/antlr4-runtime/InputMismatchException.cpp
        ANTLR-4.9.3/antlr4-runtime/InterpreterRuleContext.cpp
        ANTLR-4.9.3/antlr4-runtime/IntStream.cpp
        ANTLR-4.9.3/antlr4-runtime/Lexer.cpp
        ANTLR-4.9.3/antlr4-runtime/LexerInterpreter.cpp
        ANTLR-4.9.3/antlr4-runtime/LexerNoViableAltException.cpp
        ANTLR-4.9.3/antlr4-runtime/ListTokenSource.cpp
        ANTLR-4.9.3/antlr4-runtime/NoViableAltException.cpp
        ANTLR-4.9.3/antlr4-runtime/Parser.cpp
        ANTLR-4.9.3/antlr4-runtime/ParserInterpreter.cpp
        ANTLR-4.9.3/antlr4-runtime/ParserRuleContext.cpp
        ANTLR-4.9.3/antlr4-runtime/ProxyErrorListener.cpp
        ANTLR-4.9.3/antlr4-runtime/RecognitionException.cpp
        ANTLR-4.9.3/antlr4-runtime/Recognizer.cpp
        ANTLR-4.9.3/antlr4-runtime/RuleContext.cpp
        ANTLR-4.9.3/antlr4-runtime/RuleContextWithAltNum.cpp
        ANTLR-4.9.3/antlr4-runtime/RuntimeMetaData.cpp
        ANTLR-4.9.3/antlr4-runtime/Token.cpp
        ANTLR-4.9.3/antlr4-runtime/TokenSource.cpp
        ANTLR-4.9.3/antlr4-runtime/TokenStream.cpp
        ANTLR-4.9.3/antlr4-runtime/TokenStreamRewriter.cpp
        ANTLR-4.9.3/antlr4-runtime/UnbufferedCharStream.cpp
        ANTLR-4.9.3/antlr4-runtime/UnbufferedTokenStream.cpp
        ANTLR-4.9.3/antlr4-runtime/Vocabulary.cpp
        ANTLR-4.9.3/antlr4-runtime/WritableToken.cpp
        backend/compiler/CodeGenerator.cpp
        backend/compiler/Compiler.cpp
        backend/compiler/ExpressionGenerator.cpp
        backend/compiler/ProgramGenerator.cpp
        backend/compiler/StatementGenerator.cpp
        backend/compiler/StructuredDataGenerator.cpp
        backend/converter/CodeGenerator.cpp
        backend/converter/Converter.cpp
        backend/interpreter/Executor.cpp
        frontend/Semantics.cpp
        intermediate/symtab/Predefined.cpp
        intermediate/type/TypeChecker.cpp
        intermediate/util/CrossReferencer.cpp
        Pascal.cpp
        PascalBaseVisitor.cpp
        PascalLexer.cpp
        PascalParser.cpp
        PascalVisitor.cpp)

add_executable(Pascal ${SOURCE_FILES})
